   pause for a queue member.
 * Show the time when started the last pause for queue member on CLI for command
   'queue show'.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.7.0 to Asterisk 13.8.0 ------------
------------------------------------------------------------------------------

app_confbridge
------------------
 * Added CONFBRIDGE_INFO(muted,) for querying the muted conference state.

 * Added Muted header to AMI ConfbridgeListRooms action response list events
   to indicate the muted conference state.

 * Added Muted column to CLI "confbridge list" output to indicate the muted
   conference state and made the locked column a yes/no value instead of a
   locked/unlocked value.

res_pjproject
------------------
 * This module is the successor of res_pjsip_log_forwarder.  As well as
   handling the log forwarding (which now displays as 'pjproject:0' instead
   of 'pjsip:0'), it also adds a 'pjproject show buildopts' command to the CLI.
   This displays the compiled-in options of the pjproject installation
   Asterisk is currently running against.

res_pjsip
------------------
 * Added new global option (regcontext) to pjsip. When set, Asterisk will
   dynamically create and destroy a NoOp priority 1 extension
   for a given endpoint who registers or unregisters with us.

res_pjsip_history
------------------
 * A new module, res_pjsip_history, has been added that provides SIP history
   viewing/filtering from the CLI. The module is intended to be used on systems
   with busy SIP traffic, where existing forms of viewing SIP messages - such
   as the res_pjsip_logger - may be inadequate. The module provides two new
   CLI commands:
   - 'pjsip set history {on|off|clear}' - this enables/disables SIP history
     capturing, as well as clears an existing history capture. Note that SIP
     packets captured are stored in memory until cleared. As a result, the